# nvim-markdown-notes-memgraph

./: .gitignore  .mcp.json  ARCHITECTURE.md  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  prd.json  pyproject.toml
.claude/: settings.local.json
.claude-plugin/: plugin.json
.claude/agents/: coder.md
.claude/skills/orchestrate/: SKILL.md
.github/workflows/: docker-publish.yml
scripts/: install.sh
src/nvim_markdown_notes_memgraph/: __init__.py  __main__.py  bridge.py  cli.py  config.py  docker.py  entities.py  server.py
tests/: __init__.py  test_cli.py  test_server.py
