[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nvim-markdown-notes-memgraph"
version = "0.1.0"
description = "Standalone CLI for Memgraph + MCP server with Docker Compose orchestration"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Rick" }
]
keywords = ["memgraph", "mcp", "markdown", "notes", "neovim"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "click>=8.0",
    "pymgclient>=1.3.0",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.scripts]
nvim-markdown-notes-memgraph = "nvim_markdown_notes_memgraph.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/nvim_markdown_notes_memgraph"]

[tool.hatch.build.targets.wheel.force-include]
"docker-compose.yml" = "nvim_markdown_notes_memgraph/docker-compose.yml"
"Dockerfile" = "nvim_markdown_notes_memgraph/Dockerfile"
